@@ -15,7 +15,11 @@
  */
 package io.gravitee.apim.integration.tests.http.logging;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.*;
+import static com.github.tomakehurst.wiremock.client.WireMock.badRequest;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.getRequestedFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.okJson;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 
@@ -60,8 +64,8 @@ class LoggingV4EmulationIntegrationTest extends AbstractGatewayTest {
 
         FakeReporter fakeReporter = getBean(FakeReporter.class);
         fakeReporter.setReportableHandler(reportable -> {
-            if (reportable instanceof Log) {
-                subject.onNext((Log) reportable);
+            if (reportable instanceof Log l) {
+                subject.onNext(l);
             }
         });
     }
@@ -74,8 +78,8 @@ class LoggingV4EmulationIntegrationTest extends AbstractGatewayTest {
         logging.setScope(LoggingScope.REQUEST_RESPONSE);
         logging.setCondition("{#response.status == 200}");
 
-        if (api.getDefinition() instanceof Api) {
-            ((Api) api.getDefinition()).getProxy().setLogging(logging);
+        if (api.getDefinition() instanceof Api apiDefinition) {
+            apiDefinition.getProxy().setLogging(logging);
         }
     }
 
@@ -91,7 +95,7 @@ class LoggingV4EmulationIntegrationTest extends AbstractGatewayTest {
             .doOnNext(log -> {
                 final String transactionAndRequestId = wiremock
                     .getAllServeEvents()
-                    .get(0)
+                    .getFirst()
                     .getRequest()
                     .getHeaders()
                     .getHeader("X-Gravitee-Transaction-Id")
