@@ -20,12 +20,10 @@ import static io.gravitee.repository.management.model.Application.AuditEvent.APP
 import static io.gravitee.repository.management.model.Application.AuditEvent.APPLICATION_RESTORED;
 import static io.gravitee.repository.management.model.Application.AuditEvent.APPLICATION_UPDATED;
 import static io.gravitee.repository.management.model.Application.METADATA_ADDITIONAL_CLIENT_METADATA;
-import static io.gravitee.repository.management.model.Application.METADATA_CLIENT_CERTIFICATE;
 import static io.gravitee.repository.management.model.Application.METADATA_CLIENT_ID;
 import static io.gravitee.repository.management.model.Application.METADATA_REGISTRATION_PAYLOAD;
 import static io.gravitee.repository.management.model.Application.METADATA_TYPE;
 import static java.util.Collections.emptySet;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 
@@ -33,11 +31,13 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Sets;
+import io.gravitee.apim.core.application_certificate.crud_service.ClientCertificateCrudService;
+import io.gravitee.apim.core.application_certificate.model.ClientCertificate;
+import io.gravitee.apim.core.application_certificate.model.ClientCertificateStatus;
 import io.gravitee.apim.core.audit.model.AuditInfo;
 import io.gravitee.apim.core.subscription.domain_service.CloseSubscriptionDomainService;
 import io.gravitee.apim.core.utils.CollectionUtils;
 import io.gravitee.common.data.domain.Page;
-import io.gravitee.common.util.KeyStoreUtils;
 import io.gravitee.definition.model.Origin;
 import io.gravitee.definition.model.v4.plan.PlanMode;
 import io.gravitee.repository.exceptions.TechnicalException;
@@ -110,18 +110,13 @@ import io.gravitee.rest.api.service.configuration.application.ClientRegistration
 import io.gravitee.rest.api.service.converter.ApplicationConverter;
 import io.gravitee.rest.api.service.exceptions.ApplicationActiveException;
 import io.gravitee.rest.api.service.exceptions.ApplicationArchivedException;
-import io.gravitee.rest.api.service.exceptions.ApplicationCertificateAlreadyUsedException;
-import io.gravitee.rest.api.service.exceptions.ApplicationCertificateAuthorityException;
 import io.gravitee.rest.api.service.exceptions.ApplicationClientIdException;
-import io.gravitee.rest.api.service.exceptions.ApplicationEmptyCertificateException;
 import io.gravitee.rest.api.service.exceptions.ApplicationGrantTypesNotAllowedException;
 import io.gravitee.rest.api.service.exceptions.ApplicationGrantTypesNotFoundException;
-import io.gravitee.rest.api.service.exceptions.ApplicationInvalidCertificateException;
 import io.gravitee.rest.api.service.exceptions.ApplicationNotFoundException;
 import io.gravitee.rest.api.service.exceptions.ApplicationRedirectUrisNotFound;
 import io.gravitee.rest.api.service.exceptions.ApplicationRenewClientSecretException;
 import io.gravitee.rest.api.service.exceptions.ApplicationTypeNotFoundException;
-import io.gravitee.rest.api.service.exceptions.ClientCertificateChangeNotAllowedException;
 import io.gravitee.rest.api.service.exceptions.ClientIdAlreadyExistsException;
 import io.gravitee.rest.api.service.exceptions.InvalidApplicationApiKeyModeException;
 import io.gravitee.rest.api.service.exceptions.InvalidApplicationTypeException;
@@ -136,12 +131,11 @@ import io.gravitee.rest.api.service.v4.PlanSearchService;
 import jakarta.ws.rs.BadRequestException;
 import jakarta.xml.bind.DatatypeConverter;
 import java.io.IOException;
-import java.security.cert.Certificate;
-import java.security.cert.X509Certificate;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -153,10 +147,9 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import lombok.CustomLog;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
@@ -166,10 +159,9 @@ import org.springframework.stereotype.Component;
  * @author Nicolas GERAUD (nicolas.geraud at graviteesource.com)
  * @author GraviteeSource Team
  */
+@CustomLog
 @Component
 public class ApplicationServiceImpl extends AbstractService implements ApplicationService {
-
-    private final Logger LOGGER = LoggerFactory.getLogger(ApplicationServiceImpl.class);
 
     @Lazy
     @Autowired
@@ -230,18 +222,22 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     @Autowired
     private ConfigService configService;
 
+    @Autowired
+    private ClientCertificateCrudService clientCertificateCrudService;
+
     private final ObjectMapper mapper = new ObjectMapper();
 
     @Override
     public ApplicationEntity findById(final ExecutionContext executionContext, String applicationId) {
         try {
-            LOGGER.debug("Find application by ID: {}", applicationId);
+            log.debug("Find application by ID: {}", applicationId);
 
             Optional<Application> applicationOptional = applicationRepository.findById(applicationId);
 
             if (executionContext.hasEnvironmentId()) {
-                applicationOptional =
-                    applicationOptional.filter(result -> result.getEnvironmentId().equals(executionContext.getEnvironmentId()));
+                applicationOptional = applicationOptional.filter(result ->
+                    result.getEnvironmentId().equals(executionContext.getEnvironmentId())
+                );
             }
 
             if (applicationOptional.isPresent()) {
@@ -250,7 +246,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             throw new ApplicationNotFoundException(applicationId);
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to find an application using its ID {}", applicationId, ex);
+            log.error("An error occurs while trying to find an application using its ID {}", applicationId, ex);
             throw new TechnicalManagementException("An error occurs while trying to find an application using its ID " + applicationId, ex);
         }
     }
@@ -267,15 +263,15 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         ApplicationStatus applicationStatus
     ) {
         try {
-            LOGGER.debug("Find application by IDs: {}", applicationIds);
+            log.debug("Find application by IDs: {}", applicationIds);
 
             if (applicationIds.isEmpty()) {
                 return Collections.emptySet();
             }
 
-            ApplicationCriteria.ApplicationCriteriaBuilder criteriaBuilder = ApplicationCriteria
-                .builder()
-                .restrictedToIds(new HashSet<>(applicationIds));
+            ApplicationCriteria.ApplicationCriteriaBuilder criteriaBuilder = ApplicationCriteria.builder().restrictedToIds(
+                new HashSet<>(applicationIds)
+            );
 
             if (applicationStatus != null) {
                 criteriaBuilder.status(applicationStatus);
@@ -292,14 +288,14 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             }
             return this.convertToList(executionContext, applications.getContent());
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to find applications by ids {}", applicationIds, ex);
+            log.error("An error occurs while trying to find applications by ids {}", applicationIds, ex);
             throw new TechnicalManagementException("An error occurs while trying to find applications by ids {}" + applicationIds, ex);
         }
     }
 
     @Override
     public Set<String> findIdsByUser(ExecutionContext executionContext, String username, Sortable sortable) {
-        LOGGER.debug("Find applications for user {}", username);
+        log.debug("Find applications for user {}", username);
 
         ApplicationQuery applicationQuery = new ApplicationQuery();
         applicationQuery.setUser(username);
@@ -317,7 +313,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         RolePermission rolePermission,
         RolePermissionAction... acl
     ) {
-        LOGGER.debug("Find applicationIds for user and permission {}, {}, {}", username, rolePermission, acl);
+        log.debug("Find applicationIds for user and permission {}, {}, {}", username, rolePermission, acl);
         ApplicationQuery applicationQuery = buildApplicationQueryForUserAndPermission(executionContext, rolePermission, acl, username);
         applicationQuery.setExcludeFilters(Arrays.asList(ApplicationExcludeFilter.OWNER));
         return searchIds(executionContext, applicationQuery, sortable);
@@ -335,7 +331,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             .stream()
             .filter(roleEntity -> roleService.hasPermission(roleEntity.getPermissions(), rolePermission.getPermission(), acl))
             .map(RoleEntity::getId)
-            .collect(toList());
+            .toList();
 
         Set<String> appIds = membershipService.getReferenceIdsByMemberAndReferenceAndRoleIn(
             MembershipMemberType.USER,
@@ -353,7 +349,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
     @Override
     public Set<ApplicationListItem> findByUser(final ExecutionContext executionContext, String username, Sortable sortable) {
-        LOGGER.debug("Find applications for user {}", username);
+        log.debug("Find applications for user {}", username);
         ApplicationQuery applicationQuery = ApplicationQuery.builder().user(username).status(ApplicationStatus.ACTIVE.name()).build();
         Page<ApplicationListItem> applications = search(executionContext, applicationQuery, sortable, null);
         return new LinkedHashSet<>(applications.getContent());
@@ -361,7 +357,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
     @Override
     public Set<String> findIdsByOrganization(String organizationId) {
-        LOGGER.debug("Find applications by organization {} ", organizationId);
+        log.debug("Find applications by organization {} ", organizationId);
         if (organizationId == null || organizationId.trim().isEmpty()) {
             return emptySet();
         }
@@ -371,7 +367,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
     @Override
     public Set<String> findIdsByEnvironment(final ExecutionContext executionContext) {
-        LOGGER.debug("Find applications by environment {} ", executionContext.getEnvironmentId());
+        log.debug("Find applications by environment {} ", executionContext.getEnvironmentId());
         if (isBlank(executionContext.getEnvironmentId())) {
             return Set.of();
         }
@@ -386,7 +382,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
     @Override
     public Set<ApplicationListItem> findByGroupsAndStatus(final ExecutionContext executionContext, List<String> groupIds, String status) {
-        LOGGER.debug("Find applications by groups {}", groupIds);
+        log.debug("Find applications by groups {}", groupIds);
         try {
             ApplicationStatus requestedStatus = ApplicationStatus.valueOf(status.toUpperCase());
             Set<Application> applications = applicationRepository.findByGroups(groupIds, ApplicationStatus.valueOf(status.toUpperCase()));
@@ -395,34 +391,16 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                 ? convertToList(executionContext, applications)
                 : convertToSimpleList(applications);
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to find applications for groups {}", groupIds, ex);
+            log.error("An error occurs while trying to find applications for groups {}", groupIds, ex);
             throw new TechnicalManagementException("An error occurs while trying to find applications for groups " + groupIds, ex);
         }
     }
 
     @Override
     public ApplicationEntity create(final ExecutionContext executionContext, NewApplicationEntity newApplicationEntity, String userId) {
-        LOGGER.debug("Create {} for user {}", newApplicationEntity, userId);
+        log.debug("Create {} for user {}", newApplicationEntity, userId);
 
-        // Check that only one settings is defined
-        if (newApplicationEntity.getSettings().getApp() != null && newApplicationEntity.getSettings().getOauth() != null) {
-            throw new InvalidApplicationTypeException();
-        }
-
-        // Check that a type is defined
-        if (newApplicationEntity.getSettings().getApp() == null && newApplicationEntity.getSettings().getOauth() == null) {
-            throw new InvalidApplicationTypeException();
-        }
-
-        // Check that shared API Key mode is enabled
-        if (
-            newApplicationEntity.getApiKeyMode() == ApiKeyMode.SHARED &&
-            !parameterService.findAsBoolean(executionContext, Key.PLAN_SECURITY_APIKEY_SHARED_ALLOWED, ParameterReferenceType.ENVIRONMENT)
-        ) {
-            throw new InvalidApplicationApiKeyModeException(
-                "Can't create application with SHARED API Key mode cause environment setting is disabled"
-            );
-        }
+        creationPreFlightChecks(executionContext, newApplicationEntity);
 
         // Create application metadata
         Map<String, String> metadata = new HashMap<>();
@@ -439,7 +417,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             // If clientId is set, check for uniqueness
             String clientId = newApplicationEntity.getSettings().getApp().getClientId();
-            if (clientId != null && !clientId.trim().isEmpty()) {
+            if (StringUtils.isNotBlank(clientId)) {
                 checkClientIdIsUniqueForEnv(clientId, executionContext.getEnvironmentId());
             }
         } else {
@@ -463,11 +441,11 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     mapper.writeValueAsString(newApplicationEntity.getSettings().getOauth().getAdditionalClientMetadata())
                 );
             } catch (JsonProcessingException e) {
-                LOGGER.error("An error has occurred while serializing registration response", e);
+                log.error("An error has occurred while serializing registration response", e);
             }
         }
 
-        validateAndEncodeClientCertificate(newApplicationEntity.getSettings(), executionContext.getEnvironmentId());
+        String clientCertificate = getClientCertificate(newApplicationEntity.getSettings());
 
         if (newApplicationEntity.getGroups() != null && !newApplicationEntity.getGroups().isEmpty()) {
             //throw a NotFoundException if the group doesn't exist
@@ -497,63 +475,35 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         application.setCreatedAt(new Date());
         application.setUpdatedAt(application.getCreatedAt());
 
-        return createApplicationForEnvironment(executionContext, userId, application);
+        return createApplicationForEnvironment(executionContext, userId, application, clientCertificate);
     }
 
-    private Set<Application> getActiveApplicationsForCurrentEnvironment(String environmentId) {
-        final Set<Application> activeApplicationsForCurrentEnvironment;
-        try {
-            activeApplicationsForCurrentEnvironment = applicationRepository.findAllByEnvironment(environmentId, ApplicationStatus.ACTIVE);
-        } catch (TechnicalException ex) {
-            throw new TechnicalManagementException(
-                "An error occurs while trying to fetch applications for environment [" + environmentId + "]",
-                ex
-            );
+    private static String getClientCertificate(ApplicationSettings settings) {
+        if (settings.getTls() != null && StringUtils.isNotBlank(settings.getTls().getClientCertificate())) {
+            return settings.getTls().getClientCertificate();
         }
-        return activeApplicationsForCurrentEnvironment;
+        return null;
     }
 
-    private void validateAndEncodeClientCertificate(ApplicationSettings applicationSettings, String environmentId) {
-        if (applicationSettings.getTls() != null && !StringUtils.isBlank(applicationSettings.getTls().getClientCertificate())) {
-            // validate certificate
-            final Certificate[] certificates;
-            try {
-                certificates = KeyStoreUtils.loadPemCertificates(applicationSettings.getTls().getClientCertificate());
-            } catch (Exception e) {
-                throw new ApplicationInvalidCertificateException();
-            }
-            // For some cases, KeyStoreUtils does not throw an exception but simply returns an empty array of certificates.
-            if (certificates.length == 0) {
-                throw new ApplicationEmptyCertificateException();
-            }
-            X509Certificate certificate;
-            if (certificates.length > 1) {
-                LOGGER.debug("Certificate chain contains multiple certificates, using the first one");
-            }
-            certificate = (X509Certificate) certificates[0];
+    private void creationPreFlightChecks(ExecutionContext executionContext, NewApplicationEntity newApplicationEntity) {
+        // Check that only one settings is defined
+        if (newApplicationEntity.getSettings().getApp() != null && newApplicationEntity.getSettings().getOauth() != null) {
+            throw new InvalidApplicationTypeException();
+        }
 
-            // Accept only client certificates.
-            final boolean isCertificateAuthority = certificate.getBasicConstraints() != -1;
-            if (isCertificateAuthority) {
-                throw new ApplicationCertificateAuthorityException();
-            }
+        // Check that a type is defined
+        if (newApplicationEntity.getSettings().getApp() == null && newApplicationEntity.getSettings().getOauth() == null) {
+            throw new InvalidApplicationTypeException();
+        }
 
-            // convert it to base64
-            applicationSettings
-                .getTls()
-                .setClientCertificate(
-                    Base64.getEncoder().encodeToString(applicationSettings.getTls().getClientCertificate().trim().getBytes())
-                );
-
-            if (
-                applicationRepository.existsMetadataEntryForEnv(
-                    METADATA_CLIENT_CERTIFICATE,
-                    applicationSettings.getTls().getClientCertificate(),
-                    environmentId
-                )
-            ) {
-                throw new ApplicationCertificateAlreadyUsedException();
-            }
+        // Check that shared API Key mode is enabled
+        if (
+            newApplicationEntity.getApiKeyMode() == ApiKeyMode.SHARED &&
+            !parameterService.findAsBoolean(executionContext, Key.PLAN_SECURITY_APIKEY_SHARED_ALLOWED, ParameterReferenceType.ENVIRONMENT)
+        ) {
+            throw new InvalidApplicationApiKeyModeException(
+                "Can't create application with SHARED API Key mode cause environment setting is disabled"
+            );
         }
     }
 
@@ -561,23 +511,24 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     private ApplicationEntity createApplicationForEnvironment(
         final ExecutionContext executionContext,
         String userId,
-        Application application
+        Application application,
+        String clientCertificate
     ) {
         try {
             application.setEnvironmentId(executionContext.getEnvironmentId());
 
+            // Create client certificate if provided
+            if (clientCertificate != null) {
+                clientCertificateCrudService.create(
+                    application.getId(),
+                    ClientCertificate.builder().name(application.getName()).certificate(clientCertificate).build()
+                );
+            }
+
             Application createdApplication = applicationRepository.create(application);
 
             // Audit
-            auditService.createApplicationAuditLog(
-                executionContext,
-                createdApplication.getId(),
-                Collections.emptyMap(),
-                APPLICATION_CREATED,
-                createdApplication.getCreatedAt(),
-                null,
-                createdApplication
-            );
+            createAuditLog(executionContext, APPLICATION_CREATED, createdApplication.getCreatedAt(), null, createdApplication);
 
             // Add the primary owner of the newly created Application
             membershipService.addRoleToMemberOnReference(
@@ -594,14 +545,14 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                 notificationConfigEntity.setName("Default Mail Notifications");
                 notificationConfigEntity.setReferenceType(HookScope.APPLICATION.name());
                 notificationConfigEntity.setReferenceId(createdApplication.getId());
-                notificationConfigEntity.setHooks(Arrays.stream(ApplicationHook.values()).map(Enum::name).collect(toList()));
+                notificationConfigEntity.setHooks(Arrays.stream(ApplicationHook.values()).map(Enum::name).toList());
                 notificationConfigEntity.setNotifier(NotifierServiceImpl.DEFAULT_EMAIL_NOTIFIER_ID);
                 notificationConfigEntity.setConfig(userEntity.getEmail());
                 genericNotificationConfigService.create(notificationConfigEntity);
             }
             return convert(executionContext, createdApplication, userEntity);
         } catch (TechnicalException ex) {
-            LOGGER.error(
+            log.error(
                 "An error occurs while trying to create {} for user {} in environment {}",
                 application,
                 userId,
@@ -610,11 +561,11 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             );
             throw new TechnicalManagementException(
                 "An error occurs while trying create " +
-                application +
-                " for user " +
-                userId +
-                " in environment " +
-                executionContext.getEnvironmentId(),
+                    application +
+                    " for user " +
+                    userId +
+                    " in environment " +
+                    executionContext.getEnvironmentId(),
                 ex
             );
         }
@@ -636,13 +587,13 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             .getAllowed_grant_types()
             .stream()
             .map(ApplicationGrantTypeEntity::getType)
-            .collect(toList());
+            .toList();
         if (!allowedGrantTypes.containsAll(targetGrantTypes)) {
             throw new ApplicationGrantTypesNotAllowedException(oAuthClientSettings.getApplicationType(), targetGrantTypes);
         }
 
         List<String> redirectUris = oAuthClientSettings.getRedirectUris();
-        if (applicationTypeEntity.getRequires_redirect_uris() && (redirectUris == null || redirectUris.isEmpty())) {
+        if (Boolean.TRUE.equals(applicationTypeEntity.getRequires_redirect_uris()) && (redirectUris == null || redirectUris.isEmpty())) {
             throw new ApplicationRedirectUrisNotFound();
         }
 
@@ -653,7 +604,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             .map(ApplicationGrantTypeEntity::getResponse_types)
             .flatMap(Collection::stream)
             .distinct()
-            .collect(toList());
+            .toList();
 
         oAuthClientSettings.setResponseTypes(responseTypes);
     }
@@ -665,34 +616,17 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         UpdateApplicationEntity updateApplicationEntity
     ) {
         try {
-            LOGGER.debug("Update application {}", applicationId);
+            log.debug("Update application {}", applicationId);
 
             validateApplicationClientId(executionContext, applicationId, updateApplicationEntity);
             Set<String> groups = updateApplicationEntity.getGroups();
             validateUserGroups(executionContext, groups);
 
-            if (groups != null && !groups.isEmpty()) {
-                //throw a NotFoundException if the group doesn't exist
-                groupService.findByIds(groups);
-            }
-
             Application applicationToUpdate = applicationRepository
                 .findById(applicationId)
                 .orElseThrow(() -> new ApplicationNotFoundException(applicationId));
 
-            if (ApplicationStatus.ARCHIVED.equals(applicationToUpdate.getStatus())) {
-                throw new ApplicationArchivedException(applicationToUpdate.getName());
-            }
-
-            // Check that only one settings is defined
-            if (updateApplicationEntity.getSettings().getApp() != null && updateApplicationEntity.getSettings().getOauth() != null) {
-                throw new InvalidApplicationTypeException();
-            }
-
-            // Check that a type is defined
-            if (updateApplicationEntity.getSettings().getApp() == null && updateApplicationEntity.getSettings().getOauth() == null) {
-                throw new InvalidApplicationTypeException();
-            }
+            updatePreFlightChecks(updateApplicationEntity, applicationToUpdate, groups);
 
             // Retro-compatibility : If input API Key mode is not specified, get it from existing application
             if (updateApplicationEntity.getApiKeyMode() == null && applicationToUpdate.getApiKeyMode() != null) {
@@ -705,38 +639,45 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             // Update application metadata
             Map<String, String> metadata = new HashMap<>();
 
-            // Validate that the TLS certificate has not changed
-            if (updateApplicationEntity.getSettings().getTls() != null) {
-                String existingCertificate = applicationToUpdate.getMetadata().get(METADATA_CLIENT_CERTIFICATE);
-                metadata.put(METADATA_CLIENT_CERTIFICATE, existingCertificate);
-                String newCertificate = updateApplicationEntity.getSettings().getTls().getClientCertificate();
-                existingCertificate =
-                    existingCertificate != null ? new String(Base64.getDecoder().decode(existingCertificate)).trim() : null;
-                if (newCertificate != null && !newCertificate.trim().equals(existingCertificate)) {
-                    throw new ClientCertificateChangeNotAllowedException();
+            // Handle TLS certificate changes via ClientCertificateCrudService
+            String newCertificateToCreate = null;
+            if (
+                updateApplicationEntity.getSettings().getTls() != null &&
+                !StringUtils.isBlank(updateApplicationEntity.getSettings().getTls().getClientCertificate())
+            ) {
+                String newCertificate = updateApplicationEntity.getSettings().getTls().getClientCertificate().trim();
+
+                // Check if certificate has changed by comparing with the most recent active certificate
+                Optional<ClientCertificate> existingCertOpt = clientCertificateCrudService.findMostRecentActiveByApplicationId(
+                    applicationId
+                );
+
+                boolean certificateChanged = existingCertOpt
+                    .map(existingCert -> !newCertificate.equals(existingCert.getCertificate()))
+                    .orElse(true);
+
+                if (certificateChanged) {
+                    // Expire the current active certificate if exists
+                    existingCertOpt.ifPresent(existingCert ->
+                        // update no validation as end-date is after now since the cert is active
+                        clientCertificateCrudService.update(
+                            existingCert.getId(),
+                            ClientCertificate.builder()
+                                .name(existingCert.getName())
+                                .startsAt(existingCert.getStartsAt())
+                                .endsAt(new Date())
+                                .build()
+                        )
+                    );
+                    // Mark new certificate for creation after application update
+                    newCertificateToCreate = newCertificate;
                 }
             }
 
             // Update a simple application
             if (applicationToUpdate.getType() == ApplicationType.SIMPLE && updateApplicationEntity.getSettings().getApp() != null) {
                 // If clientId is set, check for uniqueness
-                String clientId = updateApplicationEntity.getSettings().getApp().getClientId();
-
-                if (clientId != null && !clientId.trim().isEmpty()) {
-                    LOGGER.debug("Check that client_id is unique among all applications");
-                    final Set<Application> applications = applicationRepository.findAllByEnvironment(
-                        executionContext.getEnvironmentId(),
-                        ApplicationStatus.ACTIVE
-                    );
-                    final Optional<Application> byClientId = applications
-                        .stream()
-                        .filter(app -> app.getMetadata() != null && clientId.equals(app.getMetadata().get(METADATA_CLIENT_ID)))
-                        .findAny();
-                    if (byClientId.isPresent() && !byClientId.get().getId().equals(applicationToUpdate.getId())) {
-                        LOGGER.error("An application already exists with the same client_id");
-                        throw new ClientIdAlreadyExistsException(clientId);
-                    }
-                }
+                checkClientIdUniqueness(executionContext, updateApplicationEntity, applicationToUpdate);
             } else {
                 // Check that client registration is enabled
                 checkClientRegistrationEnabled(executionContext, executionContext.getEnvironmentId());
@@ -749,25 +690,16 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                 // Update an OAuth client
                 final String registrationPayload = applicationToUpdate.getMetadata().get(METADATA_REGISTRATION_PAYLOAD);
                 if (registrationPayload != null) {
-                    try {
-                        ClientRegistrationResponse registrationResponse = clientRegistrationService.update(
-                            executionContext,
-                            registrationPayload,
-                            updateApplicationEntity
-                        );
-                        metadata.put(METADATA_CLIENT_ID, registrationResponse.getClientId());
-                        metadata.put(METADATA_REGISTRATION_PAYLOAD, mapper.writeValueAsString(registrationResponse));
-                        metadata.put(
-                            METADATA_ADDITIONAL_CLIENT_METADATA,
-                            mapper.writeValueAsString(updateApplicationEntity.getSettings().getOauth().getAdditionalClientMetadata())
-                        );
-                    } catch (Exception e) {
-                        LOGGER.error("Failed to update OAuth client data from client registration. Keeping old OAuth client data.", e);
-                        metadata.put(METADATA_CLIENT_ID, applicationToUpdate.getMetadata().get(METADATA_CLIENT_ID));
-                        metadata.put(METADATA_REGISTRATION_PAYLOAD, applicationToUpdate.getMetadata().get(METADATA_REGISTRATION_PAYLOAD));
-                    }
+                    updateClientRegistration(executionContext, updateApplicationEntity, registrationPayload, metadata, applicationToUpdate);
                 }
             }
+
+            // Create new certificate if certificate was changed
+            final Optional<String> clientCertificate = createNewCertificateIfNecessary(
+                applicationId,
+                updateApplicationEntity,
+                newCertificateToCreate
+            );
 
             Application application = applicationConverter.toApplication(updateApplicationEntity);
             application.setId(applicationId);
@@ -782,64 +714,17 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             Application updatedApplication = applicationRepository.update(application);
 
-            // Audit
-            auditService.createApplicationAuditLog(
+            createAuditLog(
                 executionContext,
-                updatedApplication.getId(),
-                Collections.emptyMap(),
                 APPLICATION_UPDATED,
                 updatedApplication.getUpdatedAt(),
                 applicationToUpdate,
                 updatedApplication
             );
 
-            // Set correct client_id for all active subscriptions
-            SubscriptionQuery subQuery = new SubscriptionQuery();
-            subQuery.setApplication(applicationId);
-            subQuery.setStatuses(Set.of(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED, SubscriptionStatus.PENDING));
-
-            String clientId = application.getMetadata().get(METADATA_CLIENT_ID);
-            String clientCertificate = application.getMetadata().get(METADATA_CLIENT_CERTIFICATE);
-
-            Consumer<Subscription> clientIdSubscriptionModifier = s -> {
-                s.setClientId(clientId);
-            };
-            Consumer<Subscription> clientCertificateSubscriptionModifier = s -> {
-                s.setClientCertificate(clientCertificate);
-            };
-            Consumer<Subscription> applicationNameSubscriptionModifier = s -> s.setApplicationName(application.getName());
-
-            subscriptionService
-                .search(executionContext, subQuery)
-                .forEach(subscriptionEntity -> {
-                    Consumer<Subscription> subscriptionModifier = null;
-                    if (areNotEmptyAndDifferent(clientId, subscriptionEntity.getClientId())) {
-                        subscriptionModifier = clientIdSubscriptionModifier;
-                    }
-                    if (areNotEmptyAndDifferent(clientCertificate, subscriptionEntity.getClientCertificate())) {
-                        subscriptionModifier =
-                            subscriptionModifier == null
-                                ? clientCertificateSubscriptionModifier
-                                : subscriptionModifier.andThen(clientCertificateSubscriptionModifier);
-                    }
-                    if (areNotEmptyAndDifferent(application.getName(), subscriptionEntity.getApplicationName())) {
-                        subscriptionModifier =
-                            subscriptionModifier == null
-                                ? applicationNameSubscriptionModifier
-                                : subscriptionModifier.andThen(applicationNameSubscriptionModifier);
-                    }
-                    if (subscriptionModifier != null) {
-                        UpdateSubscriptionEntity updateSubscriptionEntity = new UpdateSubscriptionEntity();
-                        updateSubscriptionEntity.setId(subscriptionEntity.getId());
-                        updateSubscriptionEntity.setStartingAt(subscriptionEntity.getStartingAt());
-                        updateSubscriptionEntity.setEndingAt(subscriptionEntity.getEndingAt());
-                        updateSubscriptionEntity.setConfiguration(subscriptionEntity.getConfiguration());
-                        subscriptionService.update(executionContext, updateSubscriptionEntity, subscriptionModifier);
-                    }
-                });
+            updateActiveSubscriptions(executionContext, applicationId, application, clientCertificate);
             return convertApplication(executionContext, Collections.singleton(updatedApplication)).iterator().next();
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to update application {}", applicationId, ex);
             throw new TechnicalManagementException(
                 String.format("An error occurs while trying to update application %s", applicationId),
                 ex
@@ -847,15 +732,172 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         }
     }
 
+    private void createAuditLog(
+        ExecutionContext executionContext,
+        Application.AuditEvent applicationUpdated,
+        Date updatedApplication,
+        Application applicationToUpdate,
+        Application updatedApplication1
+    ) {
+        // Audit
+        auditService.createApplicationAuditLog(
+            executionContext,
+            AuditService.AuditLogData.builder()
+                .properties(Collections.emptyMap())
+                .event(applicationUpdated)
+                .createdAt(updatedApplication)
+                .oldValue(applicationToUpdate)
+                .newValue(updatedApplication1)
+                .build(),
+            updatedApplication1.getId()
+        );
+    }
+
+    private void updateActiveSubscriptions(
+        ExecutionContext executionContext,
+        String applicationId,
+        Application application,
+        Optional<String> clientCertificate
+    ) {
+        // Set correct client_id for all active subscriptions
+        SubscriptionQuery subQuery = new SubscriptionQuery();
+        subQuery.setApplication(applicationId);
+        subQuery.setStatuses(Set.of(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED, SubscriptionStatus.PENDING));
+
+        String clientId = application.getMetadata().get(METADATA_CLIENT_ID);
+
+        final String subscriptionClientCertificate = clientCertificate
+            .map(cert -> Base64.getEncoder().encodeToString(cert.getBytes()))
+            .orElse(null);
+
+        Consumer<Subscription> clientIdSubscriptionModifier = s -> s.setClientId(clientId);
+        Consumer<Subscription> clientCertificateSubscriptionModifier = s -> s.setClientCertificate(subscriptionClientCertificate);
+        Consumer<Subscription> applicationNameSubscriptionModifier = s -> s.setApplicationName(application.getName());
+
+        subscriptionService
+            .search(executionContext, subQuery)
+            .forEach(subscriptionEntity -> {
+                Consumer<Subscription> subscriptionModifier = null;
+                if (areNotEmptyAndDifferent(clientId, subscriptionEntity.getClientId())) {
+                    subscriptionModifier = clientIdSubscriptionModifier;
+                }
+                if (areNotEmptyAndDifferent(subscriptionClientCertificate, subscriptionEntity.getClientCertificate())) {
+                    subscriptionModifier = subscriptionModifier == null
+                        ? clientCertificateSubscriptionModifier
+                        : subscriptionModifier.andThen(clientCertificateSubscriptionModifier);
+                }
+                if (areNotEmptyAndDifferent(application.getName(), subscriptionEntity.getApplicationName())) {
+                    subscriptionModifier = subscriptionModifier == null
+                        ? applicationNameSubscriptionModifier
+                        : subscriptionModifier.andThen(applicationNameSubscriptionModifier);
+                }
+                if (subscriptionModifier != null) {
+                    UpdateSubscriptionEntity updateSubscriptionEntity = new UpdateSubscriptionEntity();
+                    updateSubscriptionEntity.setId(subscriptionEntity.getId());
+                    updateSubscriptionEntity.setStartingAt(subscriptionEntity.getStartingAt());
+                    updateSubscriptionEntity.setEndingAt(subscriptionEntity.getEndingAt());
+                    updateSubscriptionEntity.setConfiguration(subscriptionEntity.getConfiguration());
+                    subscriptionService.update(executionContext, updateSubscriptionEntity, subscriptionModifier);
+                }
+            });
+    }
+
+    private Optional<String> createNewCertificateIfNecessary(
+        String applicationId,
+        UpdateApplicationEntity updateApplicationEntity,
+        String newCertificateToCreate
+    ) {
+        if (newCertificateToCreate != null) {
+            clientCertificateCrudService.create(
+                applicationId,
+                ClientCertificate.builder().name(updateApplicationEntity.getName()).certificate(newCertificateToCreate).build()
+            );
+            return Optional.of(newCertificateToCreate);
+        }
+        return Optional.empty();
+    }
+
+    private void checkClientIdUniqueness(
+        ExecutionContext executionContext,
+        UpdateApplicationEntity updateApplicationEntity,
+        Application applicationToUpdate
+    ) throws TechnicalException {
+        String clientId = updateApplicationEntity.getSettings().getApp().getClientId();
+
+        if (!StringUtils.isBlank(clientId)) {
+            log.debug("Check that client_id is unique among all applications");
+            final Set<Application> applications = applicationRepository.findAllByEnvironment(
+                executionContext.getEnvironmentId(),
+                ApplicationStatus.ACTIVE
+            );
+            final Optional<Application> byClientId = applications
+                .stream()
+                .filter(app -> app.getMetadata() != null)
+                .filter(app -> clientId.equals(app.getMetadata().get(METADATA_CLIENT_ID)))
+                .findAny();
+            if (byClientId.map(app -> !app.getId().equals(applicationToUpdate.getId())).orElse(false)) {
+                log.error("An application already exists with the same client_id");
+                throw new ClientIdAlreadyExistsException(clientId);
+            }
+        }
+    }
+
+    private void updatePreFlightChecks(
+        UpdateApplicationEntity updateApplicationEntity,
+        Application applicationToUpdate,
+        Set<String> groups
+    ) {
+        if (groups != null && !groups.isEmpty()) {
+            //throw a NotFoundException if the group doesn't exist
+            groupService.findByIds(groups);
+        }
+
+        if (ApplicationStatus.ARCHIVED.equals(applicationToUpdate.getStatus())) {
+            throw new ApplicationArchivedException(applicationToUpdate.getName());
+        }
+
+        // Check that only one settings is defined
+        if (updateApplicationEntity.getSettings().getApp() != null && updateApplicationEntity.getSettings().getOauth() != null) {
+            throw new InvalidApplicationTypeException();
+        }
+
+        // Check that a type is defined
+        if (updateApplicationEntity.getSettings().getApp() == null && updateApplicationEntity.getSettings().getOauth() == null) {
+            throw new InvalidApplicationTypeException();
+        }
+    }
+
+    private void updateClientRegistration(
+        ExecutionContext executionContext,
+        UpdateApplicationEntity updateApplicationEntity,
+        String registrationPayload,
+        Map<String, String> metadata,
+        Application applicationToUpdate
+    ) {
+        try {
+            ClientRegistrationResponse registrationResponse = clientRegistrationService.update(
+                executionContext,
+                registrationPayload,
+                updateApplicationEntity
+            );
+            metadata.put(METADATA_CLIENT_ID, registrationResponse.getClientId());
+            metadata.put(METADATA_REGISTRATION_PAYLOAD, mapper.writeValueAsString(registrationResponse));
+            metadata.put(
+                METADATA_ADDITIONAL_CLIENT_METADATA,
+                mapper.writeValueAsString(updateApplicationEntity.getSettings().getOauth().getAdditionalClientMetadata())
+            );
+        } catch (Exception e) {
+            log.error("Failed to update OAuth client data from client registration. Keeping old OAuth client data.", e);
+            metadata.put(METADATA_CLIENT_ID, applicationToUpdate.getMetadata().get(METADATA_CLIENT_ID));
+            metadata.put(METADATA_REGISTRATION_PAYLOAD, applicationToUpdate.getMetadata().get(METADATA_REGISTRATION_PAYLOAD));
+        }
+    }
+
     private void validateUserGroups(ExecutionContext executionContext, Set<String> groups) {
         ConsoleConfigEntity consoleConfig = configService.getConsoleConfig(executionContext);
 
-        if (consoleConfig.getUserGroup().getRequired().isEnabled()) {
-            if (CollectionUtils.isEmpty(groups)) {
-                throw new BadRequestException(
-                    "Updating an application is not allowed as at least one group is required on the application."
-                );
-            }
+        if (consoleConfig.getUserGroup().getRequired().isEnabled() && CollectionUtils.isEmpty(groups)) {
+            throw new BadRequestException("Updating an application is not allowed as at least one group is required on the application.");
         }
     }
 
@@ -870,7 +912,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     @Override
     public ApplicationEntity updateApiKeyMode(final ExecutionContext executionContext, String applicationId, ApiKeyMode apiKeyMode) {
         try {
-            LOGGER.debug("Update application {} with apiKeyMode {}", applicationId, apiKeyMode);
+            log.debug("Update application {} with apiKeyMode {}", applicationId, apiKeyMode);
 
             Application applicationToUpdate = applicationRepository
                 .findById(applicationId)
@@ -887,10 +929,8 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             Application updatedApplication = applicationRepository.update(applicationToUpdate);
 
             // Audit
-            auditService.createApplicationAuditLog(
+            createAuditLog(
                 executionContext,
-                updatedApplication.getId(),
-                Collections.emptyMap(),
                 APPLICATION_UPDATED,
                 updatedApplication.getUpdatedAt(),
                 applicationToUpdate,
@@ -900,11 +940,11 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             return convertApplication(executionContext, Collections.singleton(updatedApplication)).iterator().next();
         } catch (TechnicalException ex) {
             String error = String.format(
-                "An error occurs while trying to update application {} with apiKeyMode {}",
+                "An error occurs while trying to update application %s with apiKeyMode %s",
                 applicationId,
                 apiKeyMode
             );
-            LOGGER.error(error, ex);
+            log.error(error, ex);
             throw new TechnicalManagementException(error, ex);
         }
     }
@@ -923,23 +963,22 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                 .findByApplicationAndPlan(executionContext, applicationId, null)
                 .stream()
                 .filter(subscriptionEntity ->
-                    Set
-                        .of(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED, SubscriptionStatus.PENDING)
-                        .contains(subscriptionEntity.getStatus())
+                    Set.of(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED, SubscriptionStatus.PENDING).contains(
+                        subscriptionEntity.getStatus()
+                    )
                 )
                 .map(SubscriptionEntity::getPlan)
                 .collect(Collectors.toSet());
 
             if (!planIds.isEmpty()) {
-                Set<GenericPlanEntity> plans =
-                    this.planSearchService.findByIdIn(executionContext, planIds)
-                        .stream()
-                        .filter(planEntity -> PlanMode.STANDARD.equals(planEntity.getPlanMode()))
-                        .filter(planEntity -> {
-                            PlanSecurityType security = PlanSecurityType.valueOfLabel(planEntity.getPlanSecurity().getType());
-                            return security == PlanSecurityType.JWT || security == PlanSecurityType.OAUTH2;
-                        })
-                        .collect(toSet());
+                Set<GenericPlanEntity> plans = this.planSearchService.findByIdIn(executionContext, planIds)
+                    .stream()
+                    .filter(planEntity -> PlanMode.STANDARD.equals(planEntity.getPlanMode()))
+                    .filter(planEntity -> {
+                        PlanSecurityType security = PlanSecurityType.valueOfLabel(planEntity.getPlanSecurity().getType());
+                        return security == PlanSecurityType.JWT || security == PlanSecurityType.OAUTH2;
+                    })
+                    .collect(toSet());
 
                 if (!plans.isEmpty()) {
                     throw new ApplicationClientIdException(
@@ -953,7 +992,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     @Override
     public ApplicationEntity renewClientSecret(final ExecutionContext executionContext, String applicationId) {
         try {
-            LOGGER.debug("Renew client secret for application {}", applicationId);
+            log.debug("Renew client secret for application {}", applicationId);
 
             Application applicationToUpdate = applicationRepository
                 .findById(applicationId)
@@ -985,7 +1024,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     metadata.put(METADATA_CLIENT_ID, registrationResponse.getClientId());
                     metadata.put(METADATA_REGISTRATION_PAYLOAD, mapper.writeValueAsString(registrationResponse));
                 } catch (JsonProcessingException e) {
-                    LOGGER.error("An error has occurred while writing registration response", e);
+                    log.error("An error has occurred while writing registration response", e);
                 }
 
                 applicationToUpdate.setUpdatedAt(new Date());
@@ -995,10 +1034,8 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                 Application updatedApplication = applicationRepository.update(applicationToUpdate);
 
                 // Audit
-                auditService.createApplicationAuditLog(
+                createAuditLog(
                     executionContext,
-                    updatedApplication.getId(),
-                    Collections.emptyMap(),
                     APPLICATION_UPDATED,
                     updatedApplication.getUpdatedAt(),
                     applicationToUpdate,
@@ -1010,7 +1047,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             throw new ApplicationRenewClientSecretException(applicationToUpdate.getName());
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to renew client secret {}", applicationId, ex);
+            log.error("An error occurs while trying to renew client secret {}", applicationId, ex);
             throw new TechnicalManagementException(
                 String.format("An error occurs while trying to renew client secret %s", applicationId),
                 ex
@@ -1021,7 +1058,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     @Override
     public ApplicationEntity restore(final ExecutionContext executionContext, String applicationId) {
         try {
-            LOGGER.debug("Restore application {}", applicationId);
+            log.debug("Restore application {}", applicationId);
 
             Application application = applicationRepository
                 .findById(applicationId)
@@ -1065,26 +1102,18 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     subscriptionService.restore(executionContext, subscription.getId());
                 } catch (SubscriptionNotPausedException snce) {
                     // Subscription cannot be closed because it is already closed or not yet accepted
-                    LOGGER.debug("The subscription cannot be closed: {}", snce.getMessage());
+                    log.debug("The subscription cannot be closed: {}", snce.getMessage());
                 }
             });
 
             UserEntity userEntity = userService.findById(executionContext, userId);
 
             // Audit
-            auditService.createApplicationAuditLog(
-                executionContext,
-                restoredApplication.getId(),
-                Collections.emptyMap(),
-                APPLICATION_RESTORED,
-                restoredApplication.getUpdatedAt(),
-                application,
-                restoredApplication
-            );
+            createAuditLog(executionContext, APPLICATION_RESTORED, restoredApplication.getUpdatedAt(), application, restoredApplication);
 
             return convert(executionContext, restoredApplication, userEntity);
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to restore {}", applicationId, ex);
+            log.error("An error occurs while trying to restore {}", applicationId, ex);
             throw new TechnicalManagementException(String.format("An error occurs while trying to restore %s", applicationId), ex);
         }
     }
@@ -1112,7 +1141,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
     @Override
     public void archive(final ExecutionContext executionContext, String applicationId) {
         try {
-            LOGGER.debug("Delete application {}", applicationId);
+            log.debug("Delete application {}", applicationId);
 
             Application application = applicationRepository
                 .findById(applicationId)
@@ -1130,15 +1159,14 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     try {
                         apiKeyService.delete(apiKey.getKey());
                     } catch (TechnicalManagementException tme) {
-                        LOGGER.error("An error occurs while deleting API Key with id {}", apiKey.getId(), tme);
+                        log.error("An error occurs while deleting API Key with id {}", apiKey.getId(), tme);
                     }
                 });
 
                 try {
                     closeSubscriptionDomainService.closeSubscription(
                         subscription.getId(),
-                        AuditInfo
-                            .builder()
+                        AuditInfo.builder()
                             .organizationId(executionContext.getOrganizationId())
                             .environmentId(executionContext.getEnvironmentId())
                             .actor(getAuthenticatedUserAsAuditActor())
@@ -1146,7 +1174,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     );
                 } catch (SubscriptionNotClosableException snce) {
                     // Subscription cannot be closed because it is already closed or not yet accepted
-                    LOGGER.debug("The subscription cannot be closed: {}", snce.getMessage());
+                    log.debug("The subscription cannot be closed: {}", snce.getMessage());
                 }
             });
 
@@ -1160,18 +1188,12 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             membershipService.deleteReference(executionContext, MembershipReferenceType.APPLICATION, applicationId);
             // delete alerts
             applicationAlertService.deleteAll(applicationId);
+            // delete client certificates
+            clientCertificateCrudService.deleteByApplicationId(applicationId);
             // Audit
-            auditService.createApplicationAuditLog(
-                executionContext,
-                application.getId(),
-                Collections.emptyMap(),
-                APPLICATION_ARCHIVED,
-                application.getUpdatedAt(),
-                previousApplication,
-                application
-            );
+            createAuditLog(executionContext, APPLICATION_ARCHIVED, application.getUpdatedAt(), previousApplication, application);
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to delete application {}", applicationId, ex);
+            log.error("An error occurs while trying to delete application {}", applicationId, ex);
             throw new TechnicalManagementException(
                 String.format("An error occurs while trying to delete application %s", applicationId),
                 ex
@@ -1179,8 +1201,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         }
     }
 
-    private Set<ApplicationEntity> convertApplication(ExecutionContext executionContext, Collection<Application> applications)
-        throws TechnicalException {
+    private Set<ApplicationEntity> convertApplication(ExecutionContext executionContext, Collection<Application> applications) {
         if (applications == null || applications.isEmpty()) {
             return Collections.emptySet();
         }
@@ -1194,10 +1215,10 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
         //find primary owners usernames of each application
         final List<String> activeApplicationIds = applications
-            .parallelStream()
+            .stream()
             .filter(app -> ApplicationStatus.ACTIVE.equals(app.getStatus()))
             .map(Application::getId)
-            .collect(toList());
+            .collect(Collectors.toList());
 
         Set<MembershipEntity> memberships = membershipService.getMembershipsByReferencesAndRole(
             io.gravitee.rest.api.model.MembershipReferenceType.APPLICATION,
@@ -1213,21 +1234,20 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             String applicationsAsString = "?";
             if (optionalApplicationsAsString.isPresent()) applicationsAsString = optionalApplicationsAsString.get();
-            LOGGER.error("{} applications has no identified primary owners in this list {}.", poMissing, applicationsAsString);
             throw new TechnicalManagementException(
                 poMissing + " applications has no identified primary owners in this list " + applicationsAsString + "."
             );
         }
 
-        Map<String, String> applicationToUser = new HashMap<>(memberships.size());
-        Map<String, UserEntity> userIdToUserEntity = new HashMap<>(memberships.size());
+        Map<String, String> applicationToUser = HashMap.newHashMap(memberships.size());
+        Map<String, UserEntity> userIdToUserEntity = HashMap.newHashMap(memberships.size());
 
         if (!memberships.isEmpty()) {
             memberships.forEach(membership -> applicationToUser.put(membership.getReferenceId(), membership.getMemberId()));
 
             // We don't need user metadata, only global information
             userService
-                .findByIds(executionContext, memberships.stream().map(MembershipEntity::getMemberId).collect(toList()), false)
+                .findByIds(executionContext, memberships.stream().map(MembershipEntity::getMemberId).toList(), false)
                 .forEach(userEntity -> userIdToUserEntity.put(userEntity.getId(), userEntity));
         }
 
@@ -1263,7 +1283,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
     private Page<ApplicationListItem> convertToSimpleList(Page<Application> applications) {
         Set<ApplicationListItem> applicationListItems = convertToSimpleList(applications.getContent());
-        return new Page(
+        return new Page<>(
             List.copyOf(applicationListItems),
             applications.getPageNumber(),
             applicationListItems.size(),
@@ -1271,10 +1291,9 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         );
     }
 
-    private Page<ApplicationListItem> convertToList(final ExecutionContext executionContext, Page<Application> applications)
-        throws TechnicalException {
+    private Page<ApplicationListItem> convertToList(final ExecutionContext executionContext, Page<Application> applications) {
         Set<ApplicationListItem> applicationListItems = convertToList(executionContext, applications.getContent());
-        return new Page(
+        return new Page<>(
             List.copyOf(applicationListItems),
             applications.getPageNumber(),
             applicationListItems.size(),
@@ -1282,11 +1301,10 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         );
     }
 
-    private Set<ApplicationListItem> convertToList(final ExecutionContext executionContext, Collection<Application> applications)
-        throws TechnicalException {
+    private Set<ApplicationListItem> convertToList(final ExecutionContext executionContext, Collection<Application> applications) {
         Set<ApplicationEntity> entities = convertApplication(executionContext, applications);
 
-        return entities
+        Set<ApplicationListItem> apps = entities
             .stream()
             .map(applicationEntity -> {
                 ApplicationListItem item = new ApplicationListItem();
@@ -1311,10 +1329,38 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
                     .filter(application -> application.getId().equals(applicationEntity.getId()))
                     .findFirst()
                     .get();
-                item.setSettings(getSettings(executionContext, app));
+                item.setSettings(getSettings(executionContext, app, false));
                 return item;
             })
             .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        Set<ClientCertificate> certificates = clientCertificateCrudService.findByApplicationIdsAndStatuses(
+            apps.stream().map(ApplicationListItem::getId).toList(),
+            ClientCertificateStatus.ACTIVE,
+            ClientCertificateStatus.ACTIVE_WITH_END
+        );
+
+        // Group by applicationId and find most recent certificate
+        Map<String, ClientCertificate> mostRecentCertificates = certificates
+            .stream()
+            .collect(
+                Collectors.groupingBy(
+                    ClientCertificate::getApplicationId,
+                    Collectors.collectingAndThen(Collectors.maxBy(Comparator.comparing(ClientCertificate::getCreatedAt)), opt ->
+                        opt.orElse(null)
+                    )
+                )
+            );
+
+        // Set TLS settings with most recent certificate for each app
+        apps.forEach(app -> {
+            ClientCertificate mostRecent = mostRecentCertificates.get(app.getId());
+            if (mostRecent != null) {
+                app.getSettings().setTls(TlsSettings.builder().clientCertificate(mostRecent.getCertificate()).build());
+            }
+        });
+
+        return apps;
     }
 
     private ApplicationEntity convert(final ExecutionContext executionContext, Application application, UserEntity primaryOwner) {
@@ -1345,7 +1391,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         applicationEntity.setUpdatedAt(application.getUpdatedAt());
         applicationEntity.setPrimaryOwner(new PrimaryOwnerEntity(primaryOwner));
 
-        applicationEntity.setSettings(getSettings(executionContext, application));
+        applicationEntity.setSettings(getSettings(executionContext, application, true));
         applicationEntity.setDisableMembershipNotifications(application.isDisableMembershipNotifications());
         if (application.getApiKeyMode() != null) {
             applicationEntity.setApiKeyMode(ApiKeyMode.valueOf(application.getApiKeyMode().name()));
@@ -1354,66 +1400,73 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         return applicationEntity;
     }
 
-    private ApplicationSettings getSettings(final ExecutionContext executionContext, Application application) {
+    private ApplicationSettings getSettings(final ExecutionContext executionContext, Application application, boolean fetchCertificate) {
         final ApplicationSettings settings = new ApplicationSettings();
         if (application.getType() == ApplicationType.SIMPLE) {
-            SimpleApplicationSettings simpleSettings = new SimpleApplicationSettings();
-            if (application.getMetadata() != null) {
-                if (application.getMetadata().get(METADATA_CLIENT_ID) != null) {
-                    simpleSettings.setClientId(application.getMetadata().get(METADATA_CLIENT_ID));
-                }
-                if (application.getMetadata().get(METADATA_TYPE) != null) {
-                    simpleSettings.setType(application.getMetadata().get(METADATA_TYPE));
-                }
-            }
-            settings.setApp(simpleSettings);
+            setSimpleAppSettings(application, settings);
         } else {
-            OAuthClientSettings clientSettings = new OAuthClientSettings();
-            if (application.getMetadata() != null) {
-                try {
-                    final String registrationPayload = application.getMetadata().get(METADATA_REGISTRATION_PAYLOAD);
-                    if (registrationPayload != null) {
-                        final ClientRegistrationResponse registrationResponse = mapper.readValue(
-                            registrationPayload,
-                            ClientRegistrationResponse.class
-                        );
-                        clientSettings.setClientId(registrationResponse.getClientId());
-                        clientSettings.setClientSecret(registrationResponse.getClientSecret());
-                        clientSettings.setClientUri(registrationResponse.getClientUri());
-                        clientSettings.setApplicationType(registrationResponse.getApplicationType());
-                        clientSettings.setLogoUri(registrationResponse.getLogoUri());
-                        clientSettings.setResponseTypes(registrationResponse.getResponseTypes());
-                        clientSettings.setRedirectUris(registrationResponse.getRedirectUris());
-                        clientSettings.setGrantTypes(registrationResponse.getGrantTypes());
-                    }
-
-                    final String additionalClientMetadata = application.getMetadata().get(METADATA_ADDITIONAL_CLIENT_METADATA);
-                    if (additionalClientMetadata != null) {
-                        clientSettings.setAdditionalClientMetadata(mapper.readValue(additionalClientMetadata, new TypeReference<>() {}));
-                    }
-
-                    Iterator<ClientRegistrationProviderEntity> clientRegistrationProviderIte = clientRegistrationService
-                        .findAll(executionContext)
-                        .iterator();
-                    if (clientRegistrationProviderIte.hasNext()) {
-                        clientSettings.setRenewClientSecretSupported(clientRegistrationProviderIte.next().isRenewClientSecretSupport());
-                    }
-                } catch (IOException e) {
-                    LOGGER.error("An error occurred while reading client settings");
-                }
-            }
-            settings.setOauth(clientSettings);
+            setOAuthSettings(executionContext, application, settings);
         }
 
-        if (
-            application.getMetadata() != null &&
-            application.getMetadata().containsKey(METADATA_CLIENT_CERTIFICATE) &&
-            StringUtils.isNotBlank(application.getMetadata().get(METADATA_CLIENT_CERTIFICATE))
-        ) {
-            final byte[] decodedCertificate = Base64.getDecoder().decode(application.getMetadata().get(METADATA_CLIENT_CERTIFICATE));
-            settings.setTls(TlsSettings.builder().clientCertificate(new String(decodedCertificate)).build());
+        if (fetchCertificate) {
+            // Fetch the most recent active certificate from ClientCertificateCrudService
+            clientCertificateCrudService
+                .findMostRecentActiveByApplicationId(application.getId())
+                .ifPresent(cert -> settings.setTls(TlsSettings.builder().clientCertificate(cert.getCertificate()).build()));
         }
+
         return settings;
+    }
+
+    private void setOAuthSettings(ExecutionContext executionContext, Application application, ApplicationSettings settings) {
+        OAuthClientSettings clientSettings = new OAuthClientSettings();
+        if (application.getMetadata() != null) {
+            try {
+                final String registrationPayload = application.getMetadata().get(METADATA_REGISTRATION_PAYLOAD);
+                if (registrationPayload != null) {
+                    final ClientRegistrationResponse registrationResponse = mapper.readValue(
+                        registrationPayload,
+                        ClientRegistrationResponse.class
+                    );
+                    clientSettings.setClientId(registrationResponse.getClientId());
+                    clientSettings.setClientSecret(registrationResponse.getClientSecret());
+                    clientSettings.setClientUri(registrationResponse.getClientUri());
+                    clientSettings.setApplicationType(registrationResponse.getApplicationType());
+                    clientSettings.setLogoUri(registrationResponse.getLogoUri());
+                    clientSettings.setResponseTypes(registrationResponse.getResponseTypes());
+                    clientSettings.setRedirectUris(registrationResponse.getRedirectUris());
+                    clientSettings.setGrantTypes(registrationResponse.getGrantTypes());
+                }
+
+                final String additionalClientMetadata = application.getMetadata().get(METADATA_ADDITIONAL_CLIENT_METADATA);
+                if (additionalClientMetadata != null) {
+                    clientSettings.setAdditionalClientMetadata(mapper.readValue(additionalClientMetadata, new TypeReference<>() {}));
+                }
+
+                Iterator<ClientRegistrationProviderEntity> clientRegistrationProviderIte = clientRegistrationService
+                    .findAll(executionContext)
+                    .iterator();
+                if (clientRegistrationProviderIte.hasNext()) {
+                    clientSettings.setRenewClientSecretSupported(clientRegistrationProviderIte.next().isRenewClientSecretSupport());
+                }
+            } catch (IOException e) {
+                log.error("An error occurred while reading client settings");
+            }
+        }
+        settings.setOauth(clientSettings);
+    }
+
+    private static void setSimpleAppSettings(Application application, ApplicationSettings settings) {
+        SimpleApplicationSettings simpleSettings = new SimpleApplicationSettings();
+        if (application.getMetadata() != null) {
+            if (application.getMetadata().get(METADATA_CLIENT_ID) != null) {
+                simpleSettings.setClientId(application.getMetadata().get(METADATA_CLIENT_ID));
+            }
+            if (application.getMetadata().get(METADATA_TYPE) != null) {
+                simpleSettings.setType(application.getMetadata().get(METADATA_TYPE));
+            }
+        }
+        settings.setApp(simpleSettings);
     }
 
     @Override
@@ -1422,9 +1475,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         InlinePictureEntity imageEntity = new InlinePictureEntity();
         if (applicationEntity.getPicture() != null && !applicationEntity.getPicture().isEmpty()) {
             String[] parts = applicationEntity.getPicture().split(";", 2);
-            imageEntity.setType(parts[0].split(":")[1]);
-            String base64Content = applicationEntity.getPicture().split(",", 2)[1];
-            imageEntity.setContent(DatatypeConverter.parseBase64Binary(base64Content));
+            encodeImage(imageEntity, parts, applicationEntity.getPicture());
         }
         return imageEntity;
     }
@@ -1435,11 +1486,15 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         InlinePictureEntity imageEntity = new InlinePictureEntity();
         if (applicationEntity.getBackground() != null) {
             String[] parts = applicationEntity.getBackground().split(";", 2);
-            imageEntity.setType(parts[0].split(":")[1]);
-            String base64Content = applicationEntity.getBackground().split(",", 2)[1];
-            imageEntity.setContent(DatatypeConverter.parseBase64Binary(base64Content));
+            encodeImage(imageEntity, parts, applicationEntity.getBackground());
         }
         return imageEntity;
+    }
+
+    private static void encodeImage(InlinePictureEntity imageEntity, String[] parts, String applicationEntity) {
+        imageEntity.setType(parts[0].split(":")[1]);
+        String base64Content = applicationEntity.split(",", 2)[1];
+        imageEntity.setContent(DatatypeConverter.parseBase64Binary(base64Content));
     }
 
     @Override
@@ -1464,7 +1519,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
 
             return applicationRepository.searchIds(searchCriteria, convert(sortable));
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to search applications for query {}", applicationQuery, ex);
+            log.error("An error occurs while trying to search applications for query {}", applicationQuery, ex);
             throw new TechnicalManagementException("An error occurs while trying to find applications for query " + applicationQuery, ex);
         }
     }
@@ -1491,7 +1546,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
             }
             return this.convertToSimpleList(applications);
         } catch (TechnicalException ex) {
-            LOGGER.error("An error occurs while trying to search applications for query {}", applicationQuery, ex);
+            log.error("An error occurs while trying to search applications for query {}", applicationQuery, ex);
             throw new TechnicalManagementException("An error occurs while trying to find applications for query " + applicationQuery, ex);
         }
     }
@@ -1621,7 +1676,7 @@ public class ApplicationServiceImpl extends AbstractService implements Applicati
         );
         if (primaryOwnerMemberEntity == null) {
             if (!ApplicationStatus.ARCHIVED.equals(application.getStatus())) {
-                LOGGER.error("The Application {} doesn't have any primary owner.", application.getId());
+                log.error("The Application {} doesn't have any primary owner.", application.getId());
             }
             return convert(executionContext, application, null);
         }
